...
            key: const Key('view_profile_button'),
            tooltip: 'Profile',
            onPressed: () => context.push('/profile'),
            icon: ProfileAvatar(avatarFileName: user?.avatarFileName, token: token, radius: 15, name: user?.username),
          ),
          IconButton(
            key: const Key('logout_button'),
            tooltip: 'Log out',
            icon: const Icon(Icons.logout_rounded),
            onPressed: () => ref.read(authControllerProvider.notifier).logout(),
          ),
          const SizedBox(width: 4),
        ],
...
